--- a/app/src/main/res/layout/activity_form_edit_profil.xml
+++ b/app/src/main/res/layout/activity_form_edit_profil.xml
@@ -20,13 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/eprent_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/breadcrumb_height"
-        android:padding="@dimen/min_padding">
-    </android.support.v7.widget.RecyclerView>
+    <include layout="@layout/content_form_edit_profil" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
