--- a/app/src/main/res/layout/content_history.xml
+++ b/app/src/main/res/layout/content_history.xml
@@ -15,9 +15,7 @@
         android:id="@+id/vp_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:paddingBottom="@dimen/min_padding">
+        android:paddingBottom="@dimen/xmin_padding">
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
