--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -31,7 +31,7 @@
                     android:layout_width="@dimen/thumb_width"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/user_ava_man" />
+                    app:srcCompat="@android:drawable/sym_def_app_icon" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
