--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -7,6 +7,10 @@
             android:icon="@drawable/ic_person_black_24dp"
             android:title="Profil" />
         <item
+            android:id="@+id/nav_users"
+            android:icon="@drawable/ic_people_black_24dp"
+            android:title="Pegawai" />
+        <item
             android:id="@+id/nav_aset"
             android:icon="@drawable/ic_directions_car_black_24dp"
             android:title="Aset" />
