--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_users"
             android:icon="@drawable/ic_people_black_24dp"
-            android:title="Pegawai" />
+            android:title="Pengguna" />
         <item
             android:id="@+id/nav_aset"
             android:icon="@drawable/ic_directions_car_black_24dp"
