--- a/app/src/main/res/layout/content_form_aset.xml
+++ b/app/src/main/res/layout/content_form_aset.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorGrey"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.FormAsetActivity"
     tools:showIn="@layout/activity_form_aset">
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/xmin_padding"
+        android:background="@drawable/radius_white"
         android:layout_marginBottom="@dimen/btn_lmedium_height">
 
         <LinearLayout
@@ -102,6 +104,33 @@
                     android:inputType="textPersonName"
                     android:padding="@dimen/min_padding" />
 
+                <EditText
+                    android:id="@+id/editText5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Warna"
+                    android:inputType="textPersonName"
+                    android:padding="@dimen/min_padding" />
+
+                <EditText
+                    android:id="@+id/editText6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Nomor BPKB"
+                    android:inputType="textPersonName"
+                    android:padding="@dimen/min_padding" />
+
+                <EditText
+                    android:id="@+id/editText7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Kapasitas Mesin"
+                    android:inputType="textPersonName"
+                    android:padding="@dimen/min_padding" />
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -123,14 +152,101 @@
                 </RelativeLayout>
 
                 <EditText
-                    android:id="@+id/editText5"
+                    android:id="@+id/editText9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="fitur aset"
-                    android:inputType="textMultiLine"
-                    android:lines="4"
+                    android:hint="Bahan Bakar"
+                    android:inputType="textPersonName"
                     android:padding="@dimen/min_padding" />
+
+                <EditText
+                    android:id="@+id/editText10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Kursi"
+                    android:inputType="number"
+                    android:padding="@dimen/min_padding" />
+
+
+
+                <RadioGroup
+                    android:id="@+id/radiogroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/min_padding"
+                    android:layout_marginTop="@dimen/med_padding"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/r_manual"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:buttonTint="@color/colorPrimary"
+                        android:checked="true"
+                        android:contextClickable="false"
+                        android:text="Manual" />
+
+                    <RadioButton
+                        android:id="@+id/r_automatic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/colorPrimary"
+                        android:text="Automatic" />
+
+                </RadioGroup>
+
+                <CheckBox
+                    android:id="@+id/checkBox7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="AC" />
+
+                <CheckBox
+                    android:id="@+id/checkBox8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Air Bag" />
+
+                <CheckBox
+                    android:id="@+id/checkBox9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Pengemudi" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <CheckBox
+                        android:id="@+id/checkBox10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_weight="1"
+                        android:paddingEnd="@dimen/min_padding"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text="Asuransi"
+                        />
+
+                    <EditText
+                        android:id="@+id/editText11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/checkBox10"
+                        android:ems="10"
+                        android:hint="Harga Asuransi"
+                        android:inputType="number"
+                        android:layout_alignBottom="@id/checkBox10"
+                        android:padding="@dimen/min_padding" />
+                </RelativeLayout>
+
 
             </LinearLayout>
 
